# Benchmarking-AI-Factories

./: .gitignore  README.md  aif-cli  pyproject.toml
configs/: benchmark_recipes.yaml  service_recipes.yaml
docs/: CLI_GUIDE.md
examples/andrej/: hellow_world_3617259.out  main.c  script.sh
examples/tommaso/: ollama_example.sh  ollama_ouput.out
results/: README.md
results/benchmarks/: chroma_query_3699159_20251104-134347.json  chroma_throughput_3699159_20251104-133759.json  ollama_latency_3699087_20251104-132533.json  ollama_latency_3699087_20251104-133203.json  ollama_streaming_3699087_20251104-133317.json  postgres_throughput_3699161_20251104-134504.json  postgres_transaction_3699161_20251104-134511.json
src/: aif_cli.py
src/benchmarking/: benchmark_manager.py
src/benchmarking/benchmarks/: chroma_benchmark.py  ollama_benchmark.py  postgres_benchmark.py
src/common/: __init__.py  config_loader.py  job_tracker.py  slurm_utils.py
src/deployment/: service_deployment.py  service_manager.py
src/deployment/health_checks/: chroma_health_check.py  ollama_health_check.py  postgres_health_check.py
src/deployment/services/: run_chromadb_server.sh  run_ollama_server.sh  run_postgresql_server.sh
src/monitoring/: base_monitor.py  monitor_manager.py  run_monitor.py
src/monitoring/monitor_recipes/: ollama_monitor.sh
src/monitoring/services/: chroma_monitor.py  ollama_monitor.py  postgres_monitor.py
src/results/: __init__.py  result_manager.py
